# identifai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  config.json  pyproject.toml
identifai/: __main__.py  bot.py  config.py  identify.py
