[project]
name = "identifai"
version = "0.1.0"
description = "Telegram bot daemon: identify images via headless Claude Code, reply in Serbian."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0,<22",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["identifai*"]
